package main.java.com.javeriana.dao;

public class UsuarioDAOImpl {
    
}
