package main.java.com.javeriana.model;

public class Cuenta {
    
}
