package main.java.com.javeriana.model;

public class Transaccion {
    
}
