package main.java.com.javeriana.util;

public class DBConnection {
    
}
